[tool.poetry]
name = "harmonic"
version = "0.0.1"
description = "A project to reproduce a HNN harmonic oscillator."
authors = ["Martine Dyring Hansen <martine.dyring.hansen@sintef.no>"]
readme = "README.md"
repository = "https://gitlab.sintef.no/martine.dyring.hansen/hnn.harmonicoscillator"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Requirements
[tool.poetry.dependencies]
python = "=3.9.6"
requests = "^2.26.0"
black = {extras = ["jupyter"], version = "^23.10.1"}
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
tqdm = "^4.66.1"
tensorflow = "^2.13.0"
torch = "^2.0.1"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
torchvision = "^0.15.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
torchmetrics = "^1.2.0"
plotly = "^5.18.0"
seaborn = "^0.13.0"
autograd = "^1.6.2"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"